--- a/Ex1/richieste base/index.html
+++ b/Ex1/richieste base/index.html
@@ -10,6 +10,6 @@
   <body>
     <p id="result"></p>
 
-    <script type="text/javascript" src="master.js"> </script>
+    <script type="text/javascript" src="master2.js"> </script>
   </body>
 </html>
